--- a/styles/index.css
+++ b/styles/index.css
@@ -16,4 +16,7 @@ body{
     --verde: #94d34e;
     --azul: #006599;
     --color-primario: #6200EE;
+    --sombra: 0px 1px 2px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.12),
+    0px 1px 8px rgba(0, 0, 0, 0.1);
+    --color-icon: #3a3a3a;
 }
