--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -11,6 +11,13 @@
     align-items: center;
 }
 
+.navbar__accionesContenedor{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .navbar__logo {
     width: 60px;
     height: 60px;
@@ -18,16 +25,36 @@
     margin-left: 40px;
 }
 
+.navbar__acciones{
+    display: flex;
+    align-items: center;
+    margin-right: 50px;
+    justify-content: center;
+}
+
 .navbar__icon {
     width: 50px;
     height: 50px;
-    font-size: 20px;
-    margin-right: 20px;
+    font-size: 30px;
     background-color: transparent;
     border: none;
-    border: solid 1px #e1e1e1;
     border-radius: 10px;
-    color: black;
+    color: var(--color-icon);
+    outline-width: 0;
+    cursor: pointer;
+}
+
+.navbar__notificacion{
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    background-color: transparent;
+    border: none;
+    border-radius: 10px;
+    color: var(--color-icon);
+    outline-width: 0;
+    cursor: pointer;
+    margin-right: 20px;
 }
 
 .navbar__menuContenedor {
@@ -50,20 +77,26 @@
     text-align: center;
 }
 
-.navbar__li{
-    padding: 20px 0;
-    background-color: var(--color-primario);
-}
-
-.navbar__li.active{
-    background-color: var(--verde);
-    color: black;
-}
-
 .navbar__enlace{
+    padding: 20px 0;
+    background-color: white;
+    color: black;
+    list-style: none;
     text-decoration: none;
-    color: white;
     cursor: pointer;
+}
+
+.navbar__enlace:last-of-type{
+    border-bottom: solid 1px #e1e1e1;
+}
+
+.navbar__enlace.active{
+    background-color: var(--color-primario);
+    color: white;
+}
+
+.navegacion__contenedor{
+    display: none;
 }
 
 @media(min-width: 768px){
@@ -78,41 +111,46 @@
     }
 
     .navbar__menuContenedor{
-        justify-self: end;
-        position: static;
-        background-color: transparent;
-        display: grid;
-        grid-template-columns: repeat(4, auto);
-        list-style: none;
-        text-align: center;
-        transition: all 0.2s ease;
-        height: 0px;
-        width: 580px;
-        margin-right: 60px;
-        margin-top: -30px ;
+        right: -100%;
+        width: 100%;
+        z-index: 0;
+        font-size: 20px;
     }
 
     .navbar__icon{
         display: none;
     }
 
-    .navbar__li{
-        background-color: transparent;
-        padding: 0;
-        
-    }
-
-    .navbar__li:hover{
-        border-bottom: solid 2px var(--azul) ;
-
-    }
-
-    .navbar__li.active{
-        background-color: transparent;
-        border-bottom: solid 2px var(--azul) ;
+    .navbar__menuContenedor.active{
+        display: none;
     }
 
     .navbar__enlace{
-        color: black;
+        padding: 40px 0;
+        font-size: 16px;
+        background-color: transparent;
     }
+
+    .navbar__enlace:last-of-type{
+        border-bottom: none;
+    }
+
+    .navbar__enlace.active:hover{
+        background-color: var(--color-primario);
+        color: white;
+    }
+
+    .navbar__enlace:hover{
+        background-color: #e1e1e1;
+    }
+
+    .navegacion__contenedor{
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        border-right: solid 1px #e1e1e1;
+        height: 91vh;
+    }
+
 }
