--- a/styles/personal.css
+++ b/styles/personal.css
@@ -37,6 +37,8 @@
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease;
+    color: black;
+    text-decoration: none;
 }
 
 .tarjetaPersonal__contenedor:hover {
@@ -60,28 +62,8 @@
     font-size: 18px;
 }
 
-.listaPersonal__boton-mobile {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    box-shadow: var(--sombra);
-    background-color: var(--color-primario);
-    position: absolute;
-    bottom: 40px;
-    right: 20px;
-    color: white;
-    font-size: 30px;
-    border: none;
-    cursor: pointer;
-}
-
-.listaPersonal__boton {
-    display: none;
-}
-
 @media (min-width: 768px) {
-
-    .personal__contenedor{
+    .personal__contenedor {
         flex: 1;
     }
 
@@ -89,7 +71,7 @@
         width: 100%;
         margin: auto;
         display: grid;
-        grid-template-columns: repeat(2, auto);
+        grid-template-columns: repeat(1, auto);
         grid-gap: 20px;
         margin-top: 50px;
     }
@@ -114,10 +96,6 @@
         font-size: 20px;
     }
 
-    .listaPersonal__boton-mobile {
-        display: none;
-    }
-
     .listaPersonal__opciones {
         display: flex;
         align-items: center;
@@ -131,34 +109,140 @@
         margin-top: 0;
     }
 
-    .listaPersonal__boton {
-        display: inline;
-        padding: 10px;
-        border-radius: 10px;
-        box-shadow: var(--sombra);
-        background-color: var(--color-primario);
-        color: white;
-        font-size: 14px;
-        border: none;
-        cursor: pointer;
-        transition: all 0.2s ease;
-        margin-right: 40px;
-    }
-
-    .personal__divisor{
+    .personal__divisor {
         display: flex;
         justify-content: center;
     }
 
-    .listaPersonal__boton:hover{
+    .listaPersonal__boton:hover {
         transform: translateY(-5px);
         transition: all 0.2s ease;
     }
 }
 
-@media (min-width: 1110px) {
+@media (min-width: 1000px) {
+    .listaPersonal__contenedor {
+        grid-template-columns: repeat(2, auto);
+        grid-gap: 50px;
+    }
+}
+
+@media (min-width: 1400px) {
     .listaPersonal__contenedor {
         grid-template-columns: repeat(3, auto);
         grid-gap: 50px;
     }
+}
+
+/* CREAR PERSONAL */
+
+.crearUsuarioBody__contenedor {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.crearUsuarioBody__imagen {
+    display: block;
+    text-align: center;
+    overflow: hidden;
+    margin: auto;
+    position: relative;
+    width: 106px;
+    height: 106px;
+    border-radius: 50%;
+}
+
+.crearUsuarioBody__imagen > input {
+    cursor: pointer;
+    font-size: 1000px;
+    margin: 0;
+    opacity: 0;
+    outline: 0 none;
+    padding: 0;
+    position: absolute;
+    right: -1000px;
+    top: -1000px;
+}
+
+.crearUsuarioBody__imagen > img {
+    width: 106px;
+    height: 106px;
+    border-radius: 50%;
+}
+
+.crearUsuarioBody__input {
+    border: solid 1px #e1e1e1;
+    border-radius: 5px;
+    width: 100%;
+    margin: auto;
+    margin-top: 20px;
+    height: 40px;
+    font-size: 18px;
+    outline-width: 0;
+    text-align: center;
+}
+
+.crearUsuarioBody__input-textarea{
+    height: 60px;
+    text-align: left;
+}
+
+.crearUsuarioBody__cedula{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.crearUsuarioBody__cedula > select{
+    border: solid 1px #e1e1e1;
+    height: 40px;
+    font-size: 18px;
+    text-align: center;
+    outline-width: 0;
+    border-radius: 5px;
+}
+
+.crearUsuarioBody__cedula > input{
+    flex: 1;
+    margin-top: 0;
+    font-weight: 400;
+    margin-left: 5px;
+    border: solid 1px #e1e1e1;
+    border-radius: 5px;
+    height: 40px;
+    font-size: 18px;
+    outline-width: 0;
+    text-align: center;
+}
+
+.crearUsuarioBody__sexo{
+    border: solid 1px #e1e1e1;
+    height: 40px;
+    font-size: 18px;
+    text-align: center;
+    outline-width: 0;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.crearUsuarioBody__infoContact{
+    margin-top: 20px;   
+}
+
+.crearUsuarioBody__p{
+    font-size: 18px;
+}
+
+.crearUsuarioBody__botonCrear{
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: solid 1px #e1e1e1;
+    background-color: #33a354;
+    color: white;
+    padding: 10px 0;
+    font-size: 20px;
 }
